--- a/pages/jadwal-kerja.html
+++ b/pages/jadwal-kerja.html
@@ -4,13 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jadwal Pelaksanaan Kerja</title>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
 <style>
 body { font-family: Arial, sans-serif; padding: 20px; background: #f0f4ff; }
 h1 { text-align: center; }
 .controls { display: flex; gap: 20px; margin-bottom: 20px; justify-content: center; }
 select, button { padding: 10px; font-size: 1rem; }
-table { width: 100%; border-collapse: collapse; margin-top: 20px; table-layout: fixed; }
-th, td { border: 1px solid #999; padding: 5px; text-align: center; word-wrap: break-word; }
+table { width: 100%; border-collapse: collapse; table-layout: fixed; margin-top: 20px; }
+th, td { border: 1px solid #999; padding: 8px; text-align: center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
 th { background: #667eea; color: white; }
 td.editable { background: #fffbe0; cursor: pointer; }
 td.editable:focus { outline: 2px solid #667eea; }
@@ -19,6 +24,7 @@ td.editable:focus { outline: 2px solid #667eea; }
 </style>
 </head>
 <body>
+
 <h1>📋 Jadwal Pelaksanaan Kerja</h1>
 
 <div class="controls">
@@ -39,38 +45,47 @@ td.editable:focus { outline: 2px solid #667eea; }
 <div class="actions">
   <button id="btnEdit" onclick="toggleEditMode()">✏️ Edit Jadwal</button>
   <button onclick="saveAll()">💾 Simpan Semua</button>
+  <button onclick="downloadPNG()">📷 Download PNG</button>
+  <button onclick="downloadExcel()">📊 Download Excel</button>
+  <button onclick="downloadPDF()">📄 Download PDF</button>
 </div>
 
-<div id="saveIndicator">Tersimpan</div>
+<div id="saveIndicator"></div>
 
 <script>
-const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwgiV7lP6JnF6LwFzz6y3fo0l2s4unYuDfSPV8PZufVsyT8Jds4WOEy8yZDQSXEJwjjtw/exec';
+const API = 'https://script.google.com/macros/s/AKfycbwgiV7lP6JnF6LwFzz6y3fo0l2s4unYuDfSPV8PZufVsyT8Jds4WOEy8yZDQSXEJwjjtw/exec';
+
 let currentJadwal = null;
 let isEditMode = false;
 
-// Inisialisasi dropdown periode & unit
 async function init() {
   try {
-    const periodeRes = await fetch(`${APPS_SCRIPT_URL}?action=getAvailableMonths&mode=PEL`);
-    const periodeData = await periodeRes.json();
-    const selPeriode = document.getElementById('selectPeriode');
-    periodeData.forEach(p => {
-      const opt = document.createElement('option');
-      opt.value = p.value;
-      opt.textContent = p.label;
-      selPeriode.appendChild(opt);
+    // load periode
+    const r1 = await fetch(`${API}?action=getAvailableMonths&mode=PEL`);
+    const pData = await r1.json();
+    const perEl = document.getElementById('selectPeriode');
+    pData.forEach(p => {
+      const o = document.createElement('option');
+      o.value = p.value;
+      o.textContent = p.label;
+      perEl.appendChild(o);
     });
 
-    const unitRes = await fetch(`${APPS_SCRIPT_URL}?action=getUnits`);
-    const unitData = await unitRes.json();
-    const selUnit = document.getElementById('selectUnit');
-    unitData.forEach(u => {
-      const opt = document.createElement('option');
-      opt.value = u;
-      opt.textContent = u;
-      selUnit.appendChild(opt);
+    // load units
+    const r2 = await fetch(`${API}?action=getUnits`);
+    const uData = await r2.json();
+    const unitEl = document.getElementById('selectUnit');
+    uData.forEach(u => {
+      const o = document.createElement('option');
+      o.value = u;
+      o.textContent = u;
+      unitEl.appendChild(o);
     });
-  } catch(e) { console.error(e); showSaveIndicator('Error load dropdown', 3000);}
+
+  } catch(e) {
+    console.error(e);
+    showSaveIndicator('Gagal load dropdown', 3000);
+  }
 }
 
 async function loadJadwal() {
@@ -79,94 +94,140 @@ async function loadJadwal() {
   if (!sheetName || !unit) return;
 
   try {
-    const res = await fetch(`${APPS_SCRIPT_URL}?action=getJadwal&mode=PEL&sheetName=${sheetName}&unit=${unit}`);
-    const data = await res.json();
-    currentJadwal = data;
+    const res = await fetch(`${API}?action=getJadwal&mode=PEL&sheetName=${sheetName}&unit=${unit}`);
+    currentJadwal = await res.json();
     renderTable();
-  } catch(e) { console.error(e); showSaveIndicator('Error load jadwal',3000);}
+  } catch(e) {
+    console.error(e);
+    showSaveIndicator('Gagal load jadwal', 3000);
+  }
 }
 
 function renderTable() {
+  const c = document.getElementById('tableContainer');
+  c.innerHTML = '';
   if (!currentJadwal) return;
-  const container = document.getElementById('tableContainer');
-  container.innerHTML = '';
-  const table = document.createElement('table');
 
+  const t = document.createElement('table');
   const thead = document.createElement('thead');
-  const tr1 = document.createElement('tr');
-  tr1.appendChild(document.createElement('th')).textContent = 'No';
-  tr1.appendChild(document.createElement('th')).textContent = 'Nama';
-  currentJadwal.headerTanggal.forEach(t => tr1.appendChild(document.createElement('th')).textContent = t);
-  thead.appendChild(tr1);
-  table.appendChild(thead);
+  const rowh = document.createElement('tr');
+  rowh.appendChild(document.createElement('th')).textContent='No';
+  rowh.appendChild(document.createElement('th')).textContent='Nama';
+  currentJadwal.headerTanggal.forEach(d => rowh.appendChild(document.createElement('th')).textContent=d);
+  thead.appendChild(rowh);
+  t.appendChild(thead);
 
   const tbody = document.createElement('tbody');
-  currentJadwal.personil.forEach((p, idx) => {
+  currentJadwal.personil.forEach((p,pi)=>{
     const tr = document.createElement('tr');
-    tr.appendChild(document.createElement('td')).textContent = p.no;
-    tr.appendChild(document.createElement('td')).textContent = p.nama;
-    p.jadwal.forEach((j, jIdx) => {
+    tr.appendChild(document.createElement('td')).textContent=p.no;
+    tr.appendChild(document.createElement('td')).textContent=p.nama;
+    p.jadwal.forEach((val,ci)=>{
       const td = document.createElement('td');
-      td.textContent = j;
+      td.textContent = val;
       td.classList.add('editable');
       td.contentEditable = isEditMode;
-      td.addEventListener('blur', () => saveCell(idx, jIdx, td.textContent));
+      td.addEventListener('blur',()=>saveCell(pi,ci,td.textContent));
       tr.appendChild(td);
     });
     tbody.appendChild(tr);
   });
-  table.appendChild(tbody);
-  container.appendChild(table);
+  t.appendChild(tbody);
+  c.appendChild(t);
 }
 
 function toggleEditMode() {
   isEditMode = !isEditMode;
-  document.querySelectorAll('td.editable').forEach(td => td.contentEditable = isEditMode);
-  document.getElementById('btnEdit').textContent = isEditMode ? '✅ Selesai Edit' : '✏️ Edit Jadwal';
-  if(!isEditMode) showSaveIndicator('Edit selesai');
+  document.querySelectorAll('td.editable').forEach(td=>td.contentEditable=isEditMode);
+  document.getElementById('btnEdit').textContent = isEditMode ? '✔️ Selesai Edit' : '✏️ Edit Jadwal';
+  if(!isEditMode) showSaveIndicator('Mode edit off');
 }
 
-function showSaveIndicator(msg='Tersimpan', duration=2000) {
+function showSaveIndicator(msg='Tersimpan',dur=2000) {
   const el = document.getElementById('saveIndicator');
   el.textContent = msg;
-  el.style.display = 'block';
-  setTimeout(()=>el.style.display='none',duration);
+  el.style.display='block';
+  setTimeout(()=>el.style.display='none',dur);
 }
 
-async function saveCell(pIdx,jIdx,value){
-  const sheetName = document.getElementById('selectPeriode').value;
-  const unit = document.getElementById('selectUnit').value;
-  if(!sheetName || !unit) return;
-
-  try{
-    await fetch(APPS_SCRIPT_URL+'?action=saveSingleCell',{
-      method:'POST',
+// per‑cell save
+async function saveCell(pIdx,jIdx,value) {
+  try {
+    await fetch(API+'?action=saveCell', {
+      method: 'POST',
       headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({mode:'PEL',sheetName,unit,pIdx,jIdx,value})
+      body: JSON.stringify({
+        mode:'PEL',
+        sheetName: document.getElementById('selectPeriode').value,
+        unit: document.getElementById('selectUnit').value,
+        rowIdx:pIdx,
+        colIdx:jIdx,
+        value
+      })
     });
-    showSaveIndicator('Tersimpan');
-  }catch(e){console.error(e); showSaveIndicator('Error menyimpan',2000);}
+    showSaveIndicator();
+  } catch(e) {
+    console.error(e);
+    showSaveIndicator('Gagal simpan',2000);
+  }
 }
 
-async function saveAll(){
-  const sheetName = document.getElementById('selectPeriode').value;
-  const unit = document.getElementById('selectUnit').value;
-  if(!sheetName || !unit || !currentJadwal) return;
-
-  try{
+// save all
+async function saveAll() {
+  if(!currentJadwal) return;
+  try {
     const jadwalData = currentJadwal.personil.map(p=>({no:p.no,nama:p.nama,jadwal:p.jadwal}));
-    await fetch(APPS_SCRIPT_URL+'?action=saveJadwal',{
+    await fetch(API+'?action=saveJadwal',{
       method:'POST',
       headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({mode:'PEL',sheetName,unit,jadwalData})
+      body:JSON.stringify({
+        mode:'PEL',
+        sheetName: document.getElementById('selectPeriode').value,
+        unit: document.getElementById('selectUnit').value,
+        jadwalData
+      })
     });
     showSaveIndicator('Semua tersimpan');
-  }catch(e){console.error(e); showSaveIndicator('Error menyimpan semua',2000);}
+  } catch(e) {
+    console.error(e);
+    showSaveIndicator('Gagal simpan semua',3000);
+  }
+}
+
+// downloads
+function downloadPNG(){
+  html2canvas(document.querySelector('#tableContainer')).then(canvas=>{
+    const a=document.createElement('a');
+    a.download='jadwal.png';
+    a.href=canvas.toDataURL();
+    a.click();
+  });
+}
+function downloadExcel(){
+  if(!currentJadwal) return;
+  const wb=XLSX.utils.book_new();
+  const header = ['No','Nama',...currentJadwal.headerTanggal];
+  const rows = currentJadwal.personil.map(p=>[p.no,p.nama,...p.jadwal]);
+  const ws=XLSX.utils.aoa_to_sheet([header,...rows]);
+  XLSX.utils.book_append_sheet(wb,ws,'Jadwal');
+  XLSX.writeFile(wb,'jadwal.xlsx');
+}
+function downloadPDF(){
+  html2canvas(document.querySelector('#tableContainer')).then(canvas=>{
+    const img=canvas.toDataURL('image/png');
+    const pdf=new jspdf.jsPDF('landscape');
+    const props=pdf.getImageProperties(img);
+    const w=pdf.internal.pageSize.getWidth();
+    const h=props.height*w/props.width;
+    pdf.addImage(img,'PNG',0,0,w,h);
+    pdf.save('jadwal.pdf');
+  });
 }
 
 document.getElementById('selectPeriode').addEventListener('change',loadJadwal);
 document.getElementById('selectUnit').addEventListener('change',loadJadwal);
 document.addEventListener('DOMContentLoaded',init);
 </script>
+
 </body>
 </html>
