--- a/index.html
+++ b/index.html
@@ -4,146 +4,672 @@
 <meta charset="UTF-8">
 <title>SATPAM MAGELANG</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+html {
+  font-size: 16px;
+}
 
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(135deg, #f7f9ff, #eef3ff);
-  color: #2b2f4b;
+  background: linear-gradient(135deg, #1a1a2e, #16213e);
+  color: #e4e4e4;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  box-shadow: inset 0 0 100px rgba(0,0,0,0.5);
 }
 
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: 
+    repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(255,255,255,.02) 2px, rgba(255,255,255,.02) 4px),
+    repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(255,255,255,.02) 2px, rgba(255,255,255,.02) 4px);
+  pointer-events: none;
+  opacity: 0.5;
+}
 header {
-  padding: 40px 20px;
+  padding: 0 20px;
+  min-height: 8vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  background: linear-gradient(120deg, #5f7cff, #8aa6ff, #ff9acb);
+  background: linear-gradient(120deg, #0f3460, #16213e, #1a1a2e, #0f3460);
+  background-size: 200% 200%;
+  animation: gradientShift 8s ease infinite;
   color: white;
+  border-bottom: 2px solid #e94560;
+  flex-shrink: 0;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  box-shadow: 
+    0 4px 15px rgba(0,0,0,0.5),
+    inset 0 1px 0 rgba(255,255,255,0.1),
+    inset 0 -1px 0 rgba(0,0,0,0.5);
+  border-radius: 20px;
+  margin: 8px 8px 0 8px;
 }
 
+header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: 
+    radial-gradient(ellipse at center, transparent 0%, transparent 40%, rgba(255,255,255,0.08) 40%, rgba(255,255,255,0.08) 50%, transparent 50%),
+    radial-gradient(ellipse at center, transparent 0%, transparent 40%, rgba(0,0,0,0.15) 40%, rgba(0,0,0,0.15) 50%, transparent 50%);
+  background-size: 30px 40px, 30px 40px;
+  background-position: 0 0, 15px 20px;
+  opacity: 0.7;
+  pointer-events: none;
+  mix-blend-mode: overlay;
+}
+
+@keyframes gradientShift {
+  0%, 100% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+}
 header h1 {
   margin: 0;
-  font-size: 26px;
+  font-size: clamp(18px, 4vw, 22px);
   font-weight: 600;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-shadow: 
+    0 1px 0 rgba(255,255,255,0.1),
+    0 2px 4px rgba(0,0,0,0.5),
+    0 0 10px rgba(233,69,96,0.3);
 }
-
 header p {
-  margin-top: 10px;
-  font-size: 14px;
-  opacity: 0.95;
+  margin-top: 4px;
+  font-size: clamp(11px, 2.5vw, 13px);
+  opacity: 0.85;
+  color: #d4d4d4;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.5);
 }
-
+.datetime {
+  font-size: clamp(10px, 2vw, 11px);
+  color: #ff6b9d;
+  margin-top: 6px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-shadow: 
+    0 1px 3px rgba(0,0,0,0.8),
+    0 0 10px rgba(233,69,96,0.4);
+}
 /* GRID MENU UTAMA */
 .menu {
-  padding: 35px 25px 10px;
+  padding: 5px 25px 5px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-  gap: 25px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+  max-width: min(900px, 95vw);
+  margin: 0 auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  flex: 1 1 auto;
+  min-height: 0;
 }
 
+.menu::before {
+  content: '';
+  position: absolute;
+  inset: 10px;
+  background: transparent;
+  border-radius: 20px;
+  box-shadow: 
+    inset 0 2px 10px rgba(0,0,0,0.3),
+    inset 0 -2px 10px rgba(255,255,255,0.02);
+  pointer-events: none;
+  z-index: 0;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    padding: 5px 15px 5px;
+    gap: 12px;
+    max-width: 96vw;
+  }
+}
+
+@media (max-width: 480px) {
+  .menu {
+    gap: 10px;
+    padding: 5px 12px 5px;
+    max-width: 98vw;
+  }
+}
 /* KARTU MENU */
 .card {
-  background: white;
+  background: linear-gradient(145deg, #253447, #1e2a3a);
   border-radius: 18px;
-  padding: 28px 20px;
+  padding: 20px 15px;
   text-decoration: none;
   font-weight: 600;
   text-align: center;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  box-shadow: 
+    0 8px 20px rgba(0,0,0,0.4),
+    inset 0 1px 0 rgba(255,255,255,0.1),
+    inset 0 -1px 0 rgba(0,0,0,0.3);
   transition: all 0.35s ease;
   position: relative;
   overflow: hidden;
+  border: 1px solid rgba(255,255,255,0.1);
+  font-size: clamp(12px, 2.5vw, 16px);
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
+  line-height: 1.3;
+  box-sizing: border-box;
+  text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+  min-width: 0;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: 
+    linear-gradient(30deg, rgba(255,255,255,.05) 12%, transparent 12.5%, transparent 87%, rgba(255,255,255,.05) 87.5%, rgba(255,255,255,.05)),
+    linear-gradient(150deg, rgba(255,255,255,.05) 12%, transparent 12.5%, transparent 87%, rgba(255,255,255,.05) 87.5%, rgba(255,255,255,.05)),
+    linear-gradient(30deg, rgba(255,255,255,.05) 12%, transparent 12.5%, transparent 87%, rgba(255,255,255,.05) 87.5%, rgba(255,255,255,.05)),
+    linear-gradient(150deg, rgba(255,255,255,.05) 12%, transparent 12.5%, transparent 87%, rgba(255,255,255,.05) 87.5%, rgba(255,255,255,.05)),
+    linear-gradient(60deg, rgba(255,255,255,.03) 25%, transparent 25.5%, transparent 75%, rgba(255,255,255,.03) 75%, rgba(255,255,255,.03)),
+    linear-gradient(60deg, rgba(255,255,255,.03) 25%, transparent 25.5%, transparent 75%, rgba(255,255,255,.03) 75%, rgba(255,255,255,.03));
+  background-size: 80px 140px;
+  background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+  opacity: 1;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.card > * {
+  max-width: 100%;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+@media (max-width: 768px) {
+  .card {
+    padding: 12px 10px;
+    border-radius: 16px;
+    font-size: clamp(9px, 2vw, 12px);
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    padding: 10px 8px;
+    border-radius: 14px;
+    font-size: clamp(8px, 2.2vw, 11px);
+  }
 }
 
 .card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 18px 35px rgba(0,0,0,0.12);
+  transform: translateY(-6px) scale(1.02);
+  box-shadow: 
+    0 12px 30px rgba(233,69,96,0.3), 
+    0 0 30px rgba(233,69,96,0.15),
+    inset 0 2px 0 rgba(255,255,255,0.15),
+    inset 0 -2px 0 rgba(0,0,0,0.4);
+  border-color: #e94560;
 }
 
-/* WARNA TIAP MENU */
-.kerja { color:#3f51b5; }
-.absensi { color:#009688; }
-.backup { color:#ff7043; }
-.timesheet { color:#8e24aa; }
-.unit { color:#1565c0; }
-.personil { color:#2e7d32; }
+.card:active {
+  transform: translateY(-4px) scale(1.01);
+  box-shadow: 
+    0 6px 15px rgba(233,69,96,0.3),
+    inset 0 1px 0 rgba(255,255,255,0.08),
+    inset 0 -1px 0 rgba(0,0,0,0.25);
+}
 
+.card-icon {
+  font-size: clamp(22px, 4.5vw, 32px);
+  display: block;
+  margin-bottom: 10px;
+  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
+  flex-shrink: 0;
+  max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  .card-icon {
+    font-size: clamp(20px, 4vw, 26px);
+    margin-bottom: 6px;
+  }
+}
+
+@media (max-width: 480px) {
+  .card-icon {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
+.card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 12px 30px rgba(233,69,96,0.3);
+  border-color: #e94560;
+}
+/* WARNA TIAP MENU */
+.kerja { color:#4fc3f7; }
+.absensi { color:#66bb6a; }
+.backup { color:#ffa726; }
+.timesheet { color:#ab47bc; }
+.unit { color:#42a5f5; }
+.personil { color:#26c6da; }
 .card::before {
   content:"";
   position:absolute;
   inset:0;
-  background: linear-gradient(120deg, transparent, rgba(0,0,0,0.06), transparent);
+  background: linear-gradient(120deg, transparent, rgba(233,69,96,0.1), transparent);
   opacity:0;
   transition:.3s;
 }
-
 .card:hover::before {
   opacity:1;
 }
-
 /* HUBUNGI ADMIN */
 .admin-wrap {
-  padding: 10px 25px 30px;
+  padding: 8px 25px 8px;
   text-align: center;
+  flex-shrink: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 480px) {
+  .admin-wrap {
+    padding: 6px 15px 6px;
+    gap: 10px;
+  }
 }
 
 .admin {
   display: inline-block;
-  background: white;
-  padding: 14px 26px;
-  border-radius: 14px;
-  font-size: 13px;
+  background: linear-gradient(145deg, #e94560, #c72545);
+  padding: 10px 20px;
+  border-radius: 16px;
+  font-size: clamp(10px, 2vw, 12px);
   font-weight: 600;
   text-decoration: none;
-  color: #d81b60;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+  color: #ffffff;
+  box-shadow: 
+    0 6px 16px rgba(233,69,96,0.4),
+    inset 0 1px 0 rgba(255,255,255,0.2),
+    inset 0 -1px 0 rgba(0,0,0,0.3);
   transition: 0.3s;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.4);
+}
+
+@media (max-width: 480px) {
+  .admin {
+    padding: 8px 16px;
+  }
 }
 
 .admin:hover {
   transform: translateY(-3px);
-  box-shadow: 0 12px 25px rgba(0,0,0,0.12);
+  box-shadow: 
+    0 12px 25px rgba(233,69,96,0.5),
+    inset 0 2px 0 rgba(255,255,255,0.25),
+    inset 0 -2px 0 rgba(0,0,0,0.4);
+  background: linear-gradient(145deg, #c72545, #e94560);
 }
 
+.admin:active {
+  transform: translateY(-1px);
+  box-shadow: 
+    0 4px 10px rgba(233,69,96,0.4),
+    inset 0 1px 0 rgba(255,255,255,0.15),
+    inset 0 -1px 0 rgba(0,0,0,0.25);
+}
+
+/* THEME TOGGLE SWITCH */
+.theme-toggle {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.theme-toggle-label {
+  font-size: clamp(10px, 2vw, 11px);
+  color: #888;
+  font-weight: 500;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 26px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(145deg, #2a3a52, #1e2a3a);
+  transition: 0.3s;
+  border-radius: 26px;
+  box-shadow: 
+    0 4px 10px rgba(0,0,0,0.4),
+    inset 0 1px 0 rgba(255,255,255,0.1),
+    inset 0 -1px 0 rgba(0,0,0,0.3);
+}
+
+.slider:before {
+  position: absolute;
+  content: "🌙";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  bottom: 3px;
+  background: linear-gradient(145deg, #ffffff, #e0e0e0);
+  transition: 0.3s;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+}
+
+input:checked + .slider {
+  background: linear-gradient(145deg, #ffd93d, #f6c23e);
+}
+
+input:checked + .slider:before {
+  transform: translateX(24px);
+  content: "☀️";
+}
+
+.slider:hover {
+  box-shadow: 
+    0 6px 15px rgba(0,0,0,0.5),
+    inset 0 1px 0 rgba(255,255,255,0.15),
+    inset 0 -1px 0 rgba(0,0,0,0.4);
+}
 footer {
   text-align: center;
-  padding: 16px;
-  font-size: 12px;
-  color: #777;
+  padding: 5px 10px;
+  font-size: clamp(9px, 1.8vw, 11px);
+  color: #888;
+  border-top: 1px solid rgba(255,255,255,0.1);
+  flex-shrink: 0;
+  line-height: 1.3;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-width: 100%;
+  box-sizing: border-box;
+  box-shadow: 
+    0 -4px 15px rgba(0,0,0,0.5),
+    inset 0 1px 0 rgba(255,255,255,0.05),
+    inset 0 -1px 0 rgba(0,0,0,0.3);
+  position: relative;
+  border-radius: 20px;
+  margin: 0 8px 5px 8px;
+  align-self: flex-end;
+  width: calc(100% - 16px);
+}
+
+@media (max-width: 480px) {
+  footer {
+    padding: 4px 8px;
+  }
+}
+
+/* LIGHT THEME */
+body.light-theme {
+  background: linear-gradient(135deg, #e8f0f7, #d4e3f0);
+  color: #1a1a2e;
+  box-shadow: inset 0 0 100px rgba(0,0,0,0.1);
+}
+
+body.light-theme::before {
+  background-image: 
+    repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,0,0,.03) 2px, rgba(0,0,0,.03) 4px),
+    repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(0,0,0,.03) 2px, rgba(0,0,0,.03) 4px);
+}
+
+body.light-theme header {
+  background: linear-gradient(120deg, #2563eb, #3b82f6, #60a5fa, #2563eb);
+  background-size: 200% 200%;
+  box-shadow: 
+    0 4px 15px rgba(0,0,0,0.15),
+    inset 0 1px 0 rgba(255,255,255,0.3),
+    inset 0 -1px 0 rgba(0,0,0,0.2);
+  border-bottom: 2px solid #1e40af;
+}
+
+body.light-theme header::before {
+  background-image: 
+    radial-gradient(ellipse at center, transparent 0%, transparent 40%, rgba(255,255,255,0.1) 40%, rgba(255,255,255,0.1) 50%, transparent 50%),
+    radial-gradient(ellipse at center, transparent 0%, transparent 40%, rgba(0,0,0,0.1) 40%, rgba(0,0,0,0.1) 50%, transparent 50%);
+}
+
+body.light-theme header h1,
+body.light-theme header p {
+  color: #ffffff;
+  text-shadow: 
+    0 1px 0 rgba(0,0,0,0.2),
+    0 2px 4px rgba(0,0,0,0.3);
+}
+
+body.light-theme .card {
+  background: linear-gradient(145deg, #ffffff, #f8fafc);
+  border: 1px solid rgba(0,0,0,0.08);
+  color: #1e293b;
+  box-shadow: 
+    0 8px 20px rgba(0,0,0,0.08),
+    inset 0 1px 0 rgba(255,255,255,1),
+    inset 0 -1px 0 rgba(0,0,0,0.05);
+  text-shadow: 0 1px 1px rgba(255,255,255,0.8);
+}
+
+body.light-theme .card::after {
+  background-image: 
+    linear-gradient(30deg, rgba(0,0,0,.03) 12%, transparent 12.5%, transparent 87%, rgba(0,0,0,.03) 87.5%, rgba(0,0,0,.03)),
+    linear-gradient(150deg, rgba(0,0,0,.03) 12%, transparent 12.5%, transparent 87%, rgba(0,0,0,.03) 87.5%, rgba(0,0,0,.03)),
+    linear-gradient(30deg, rgba(0,0,0,.03) 12%, transparent 12.5%, transparent 87%, rgba(0,0,0,.03) 87.5%, rgba(0,0,0,.03)),
+    linear-gradient(150deg, rgba(0,0,0,.03) 12%, transparent 12.5%, transparent 87%, rgba(0,0,0,.03) 87.5%, rgba(0,0,0,.03)),
+    linear-gradient(60deg, rgba(0,0,0,.02) 25%, transparent 25.5%, transparent 75%, rgba(0,0,0,.02) 75%, rgba(0,0,0,.02)),
+    linear-gradient(60deg, rgba(0,0,0,.02) 25%, transparent 25.5%, transparent 75%, rgba(0,0,0,.02) 75%, rgba(0,0,0,.02));
+  background-size: 80px 140px;
+  background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+  opacity: 1;
+}
+
+body.light-theme .card:hover {
+  box-shadow: 
+    0 12px 30px rgba(233,69,96,0.15), 
+    0 0 30px rgba(233,69,96,0.08),
+    inset 0 2px 0 rgba(255,255,255,1),
+    inset 0 -2px 0 rgba(0,0,0,0.08);
+  border-color: rgba(233,69,96,0.3);
+}
+
+body.light-theme .kerja { color:#2563eb; }
+body.light-theme .absensi { color:#059669; }
+body.light-theme .backup { color:#ea580c; }
+body.light-theme .timesheet { color:#9333ea; }
+body.light-theme .unit { color:#0284c7; }
+body.light-theme .personil { color:#16a34a; }
+
+body.light-theme footer {
+  color: #475569;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  box-shadow: 
+    0 -4px 15px rgba(0,0,0,0.08),
+    inset 0 1px 0 rgba(255,255,255,0.8),
+    inset 0 -1px 0 rgba(0,0,0,0.05);
+  background: linear-gradient(145deg, #f8fafc, #f1f5f9);
+}
+
+body.light-theme .menu::before {
+  box-shadow: 
+    inset 0 2px 10px rgba(0,0,0,0.05),
+    inset 0 -2px 10px rgba(255,255,255,0.5);
+}
+
+body.light-theme .datetime {
+  color: #dc2626;
+  text-shadow: 
+    0 1px 0 rgba(255,255,255,0.8),
+    0 1px 3px rgba(0,0,0,0.2);
+}
+
+body.light-theme .theme-toggle-label {
+  color: #475569;
+  font-weight: 600;
+}
+
+body.light-theme .admin {
+  background: linear-gradient(145deg, #e94560, #dc2626);
+  color: #ffffff;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.4);
+}
+
+body.light-theme .admin:hover {
+  background: linear-gradient(145deg, #dc2626, #e94560);
 }
 </style>
 </head>
-
 <body>
-
 <header>
   <h1>Selamat Datang</h1>
   <p>Manajemen Jadwal & Manajemen Personil</p>
+  <p>SATPAM MAGELANG</p>
+  <div class="datetime" id="datetime"></div>
 </header>
-
 <section class="menu">
-  <a href="pages/jadwal-satpam.html" class="card kerja">JADWAL PELAKSANAAN KERJA</a>
-  <a href="pages/jadwal-absensi.html" class="card absensi">JADWAL PENGIRIMAN ABSENSI</a>
-  <a href="pages/backup-personil.html" class="card backup">FORM PERSONIL BACKUP</a>
-  <a href="pages/timesheet.html" class="card timesheet">TIMESHEET MAKER</a>
-  <a href="pages/data-unit.html" class="card unit">DATA UNIT</a>
-  <a href="pages/database.html" class="card personil">DATA PERSONIL</a>
+  <a href="pages/jadwal-satpam.html" class="card kerja">
+    <span class="card-icon">📅</span>
+    JADWAL PELAKSANAAN KERJA
+  </a>
+  <a href="pages/jadwal-absensi.html" class="card absensi">
+    <span class="card-icon">✓</span>
+    JADWAL PENGIRIMAN ABSENSI
+  </a>
+  <a href="pages/database.html" class="card personil">
+    <span class="card-icon">👥</span>
+    DATA PERSONIL
+  </a>
+  <a href="pages/status-jaga.html" class="card unit">
+    <span class="card-icon">🛡️</span>
+    STATUS JAGA HARI INI
+  </a>
+  <a href="pages/backup-personil.html" class="card backup">
+    <span class="card-icon">🔄</span>
+    FORM PERSONIL BACKUP
+  </a>
+  <a href="pages/timesheet.html" class="card timesheet">
+    <span class="card-icon">⏱️</span>
+    TIMESHEET MAKER
+  </a>
 </section>
-
 <div class="admin-wrap">
   <a href="pages/hubungi-admin.html" class="admin">HUBUNGI ADMIN</a>
+  <div class="theme-toggle">
+    <span class="theme-toggle-label">Mode</span>
+    <label class="switch">
+      <input type="checkbox" id="themeToggle">
+      <span class="slider"></span>
+    </label>
+  </div>
 </div>
-
 <footer>
   © 2026 "Langkah kecil hari ini adalah kemenangan besar di masa depan"
 </footer>
 
+<script>
+function updateDateTime() {
+  const now = new Date();
+  const options = { 
+    weekday: 'long', 
+    year: 'numeric', 
+    month: 'long', 
+    day: 'numeric',
+    hour: '2-digit',
+    minute: '2-digit',
+    second: '2-digit'
+  };
+  const dateTimeString = now.toLocaleDateString('id-ID', options);
+  document.getElementById('datetime').textContent = dateTimeString;
+}
+
+updateDateTime();
+setInterval(updateDateTime, 1000);
+
+// Theme Toggle
+const themeToggle = document.getElementById('themeToggle');
+const body = document.body;
+
+// Load saved theme or default to light
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark') {
+  body.classList.remove('light-theme');
+  themeToggle.checked = false;
+} else {
+  // Default to light theme
+  body.classList.add('light-theme');
+  themeToggle.checked = true;
+  if (!savedTheme) {
+    localStorage.setItem('theme', 'light');
+  }
+}
+
+themeToggle.addEventListener('change', function() {
+  if (this.checked) {
+    body.classList.add('light-theme');
+    localStorage.setItem('theme', 'light');
+  } else {
+    body.classList.remove('light-theme');
+    localStorage.setItem('theme', 'dark');
+  }
+});
+</script>
 </body>
 </html>
-
-
-
-
-
-
